--- a/TWJieShuQuan/Authentication/Controllers/LoginViewController.xib
+++ b/TWJieShuQuan/Authentication/Controllers/LoginViewController.xib
@@ -53,6 +53,20 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g92-sr-yGB" userLabel="Content View" customClass="UIControl">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                     <subviews>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="**@thoughtworks.com" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9s4-30-HV1" userLabel="email">
+                            <rect key="frame" x="50" y="147" width="314" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="362" id="gGv-iW-ziO"/>
+                            </constraints>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="gGv-iW-ziO"/>
+                                </mask>
+                            </variation>
+                        </textField>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w8G-m5-38P" userLabel="emailUnderline">
                             <rect key="frame" x="50" y="185" width="314" height="1"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -112,20 +126,16 @@
                                 <action selector="forgetPasswordPressed:" destination="-1" eventType="touchUpInside" id="BoM-s1-vKy"/>
                             </connections>
                         </button>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="**@thoughtworks.com" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9s4-30-HV1" userLabel="email">
-                            <rect key="frame" x="50" y="147" width="314" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="362" id="gGv-iW-ziO"/>
-                            </constraints>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                            <textInputTraits key="textInputTraits" returnKeyType="next"/>
-                            <variation key="default">
-                                <mask key="constraints">
-                                    <exclude reference="gGv-iW-ziO"/>
-                                </mask>
-                            </variation>
-                        </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4KA-12-Buo">
+                            <rect key="frame" x="334" y="656" width="30" height="30"/>
+                            <state key="normal" title="注册">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="registerButtonPressed:" destination="-1" eventType="touchUpInside" id="79a-QC-DPr"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -142,12 +152,15 @@
                         <constraint firstItem="9s4-30-HV1" firstAttribute="top" secondItem="g92-sr-yGB" secondAttribute="top" constant="135" id="O7p-p4-a5O"/>
                         <constraint firstItem="9s4-30-HV1" firstAttribute="top" secondItem="g92-sr-yGB" secondAttribute="top" constant="150" id="PLi-IN-uiy"/>
                         <constraint firstItem="E24-t7-k00" firstAttribute="top" secondItem="6On-gr-mYf" secondAttribute="bottom" constant="71" id="Uw3-ej-mVg"/>
+                        <constraint firstItem="4KA-12-Buo" firstAttribute="leading" secondItem="2JP-hY-ZUC" secondAttribute="trailing" constant="209" id="W8a-iY-jlQ"/>
                         <constraint firstItem="2JP-hY-ZUC" firstAttribute="top" secondItem="E24-t7-k00" secondAttribute="bottom" constant="63" id="WVJ-cp-Pa8"/>
                         <constraint firstItem="6On-gr-mYf" firstAttribute="top" secondItem="WWg-Du-UzB" secondAttribute="bottom" constant="5" id="Yol-G3-xBA"/>
                         <constraint firstItem="6On-gr-mYf" firstAttribute="leading" secondItem="WWg-Du-UzB" secondAttribute="leading" id="ewT-8k-5pE"/>
+                        <constraint firstItem="4KA-12-Buo" firstAttribute="trailing" secondItem="9s4-30-HV1" secondAttribute="trailing" id="oxy-Vb-qjq"/>
                         <constraint firstItem="9s4-30-HV1" firstAttribute="leading" secondItem="g92-sr-yGB" secondAttribute="leading" constant="50" id="sl9-Pp-H03"/>
                         <constraint firstItem="w8G-m5-38P" firstAttribute="top" secondItem="9s4-30-HV1" secondAttribute="bottom" constant="5" id="toV-7K-yTN"/>
                         <constraint firstItem="w8G-m5-38P" firstAttribute="width" secondItem="9s4-30-HV1" secondAttribute="width" id="wtc-vl-yo0"/>
+                        <constraint firstItem="4KA-12-Buo" firstAttribute="top" secondItem="2JP-hY-ZUC" secondAttribute="bottom" constant="-30" id="x4o-CS-cU9"/>
                         <constraint firstAttribute="centerX" secondItem="E24-t7-k00" secondAttribute="centerX" id="zM7-j8-la2"/>
                     </constraints>
                     <variation key="default">
